--- a/WebContent/app/views/partials/docente/partialDocenteEmpleos.html
+++ b/WebContent/app/views/partials/docente/partialDocenteEmpleos.html
@@ -1,8 +1,8 @@
-<div class="panel panel-success" ng-show="logueado">
+<div class="panel panel-primary" ng-show="logueado">
 	<div class="panel-heading">
 		<h5 class="panel-title">Empleos</h5>
 	</div>
-	<div class="panel-body bg-success">
+	<div class="panel-body ">
 		<table class="table table-hover table-condensed table-striped">
 			<thead>
 				<tr>
@@ -64,7 +64,7 @@
 			</tbody>
 		</table>
 	</div>
-	<div class="panel-footer bg-success">
+	<div class="panel-footer ">
 		<button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
 	</div>
 </div>
