--- a/WebContent/app/views/busquedas.html
+++ b/WebContent/app/views/busquedas.html
@@ -5,31 +5,13 @@
 	<modal-alert></modal-alert>
 	<!-- Confirmacion Borrar -->
 	<modal-confirm></modal-confirm>
-	
-	<partial-filtro-docentes></partial-filtro-docentes>
-	
-<!-- 		<tab heading="Personal"> -->
-<!-- 				<tab heading="Docente"> -->
-<!-- 				<tab heading="Desempeño"> -->
-<!-- 		</tab>  -->
-<!-- 		<tab heading="Planes"> -->
-<!-- 				<tab heading="Asignaturas"> -->
-<!-- 				<tab heading="Carreras"> -->
-<!-- 				<tab heading="Planes de Estudio"> -->
-<!-- 		</tab>  -->
-<!-- 		<tab heading="Instituciones"> -->
-<!-- 				<tab heading="Institutos"> -->
-<!-- 				<tab heading="Sedes"> -->
-<!-- 		</tab>  -->
-<!-- 		<tab heading="Localizacion"> -->
-<!-- 				<tab heading="Provincias"> -->
-<!-- 				<tab heading="Partidos"> -->
-<!-- 				<tab heading="Localidades"> -->
-<!-- 		</tab>  -->
-<!-- 		<tab heading="Tipos"> -->
-<!-- 		</tab>  -->
-<!-- 	</tabset> -->
-	
-	<docente-listado-filtrado></docente-listado-filtrado>
-	
+
+	<div class="col-sm-9">
+		<docente-listado-filtrado></docente-listado-filtrado>
+	</div>
+
+	<div class="col-sm-3">
+		<partial-filtro-docentes></partial-filtro-docentes>
+	</div>
+
 </div>
