--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -1,5 +1,6 @@
 <div class="row" ng-show="logueado">
-	<div class="pull-right" ng-if="referencias!=undefined && referencias!=null && referencias.lenght!=0">
+	<div class="pull-right"
+		ng-if="referencias!=undefined && referencias!=null && referencias.lenght!=0">
 		<referencia></referencia>
 	</div>
 	<!-- Page Header -->
@@ -17,8 +18,9 @@
 				<!-- Panel Header -->
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a href="" ng-click="colapsarFormulario=!colapsarFormulario">Nuevo {{nombreForm}} 
-							<i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': colapsarFormulario, 'glyphicon-chevron-up': !colapsarFormulario}"></i>
+						<a href="" ng-click="colapsarFormulario=!colapsarFormulario">Nuevo
+							{{nombreForm}} <i class="pull-right glyphicon"
+							ng-class="{'glyphicon-chevron-down': colapsarFormulario, 'glyphicon-chevron-up': !colapsarFormulario}"></i>
 						</a>
 					</h4>
 				</div>
@@ -26,29 +28,43 @@
 				<div class="panel-body" collapse="colapsarFormulario">
 					<form role="form" name="formAction">
 						<!-- Informacion Personal -->
-						<docente-info-personal></docente-info-personal>
+						<div class="col-sm-6">
+							<docente-info-personal></docente-info-personal>
+						</div>
 						<!-- Informacion Administrativa -->
-						<docente-info-administrativa></docente-info-administrativa>
+						<div class="col-sm-6">
+							<docente-info-administrativa></docente-info-administrativa>
+						</div>
 						<!-- Domicilios -->
-						<docente-domicilios></docente-domicilios>
+						<div class="col-sm-6">
+							<docente-domicilios></docente-domicilios>
+						</div>
 						<!-- Medios de Contacto -->
-						<docente-medios-contacto></docente-medios-contacto>
+						<div class="col-sm-6">
+							<docente-medios-contacto></docente-medios-contacto>
+						</div>
 						<!-- Formacion Academica -->
-						<docente-form-academica></docente-form-academica>
+						<div class="col-sm-10">
+							<docente-form-academica></docente-form-academica>
+						</div>
 						<!-- Empleos -->
-						<docente-empleos></docente-empleos>
+						<div class="col-sm-10">
+							<docente-empleos></docente-empleos>
+						</div>
 					</form>
 				</div>
 				<!-- Panel Footer : Buttons -->
 				<div class="panel-footer" ng-show="!colapsarFormulario">
 					<button type="submit" class="btn btn-primary" ng-click="guardar()">Guardar</button>
-					<button type="submit" class="btn btn-default pull-right" ng-click="limpiar()">Limpiar</button>
-					<button type="submit" class="btn btn-default pull-right" ng-click="cerrarForm()">Cerrar</button>
+					<button type="submit" class="btn btn-default pull-right"
+						ng-click="limpiar()">Limpiar</button>
+					<button type="submit" class="btn btn-default pull-right"
+						ng-click="cerrarForm()">Cerrar</button>
 				</div>
 			</div>
 		</div>
 	</div>
-	
+
 	<!-- Listado Actuales -->
 	<docente-listado-actuales></docente-listado-actuales>
 
