--- a/WebContent/app/views/desempenios.html
+++ b/WebContent/app/views/desempenios.html
@@ -32,7 +32,7 @@
 						<label>Asignatura</label>
 					</dt>
 					<dd>
-						<select class="form-control" ng-options="(asignatura.nombre + ', ' + asignatura.anio + 'Â°, ' + asignatura.carrera.nombre) for asignatura in asignaturas" required ng-model="asignaturaSel">
+						<select class="form-control" ng-options="(asignatura.nombre + ', ' + asignatura.anio + '°, ' + asignatura.carrera.nombre) for asignatura in asignaturas" required ng-model="asignaturaSel">
 							<option value="">-- Asignatura --</option>
 						</select>
 					</dd>
