- quito el div sobre la referencia

--- a/WebContent/app/views/docentes.html
+++ b/WebContent/app/views/docentes.html
@@ -1,8 +1,8 @@
 <div class="row" ng-show="logueado">
-	<div class="pull-right"
-		ng-if="referencias!=undefined && referencias!=null && referencias.lenght!=0">
-		<referencia></referencia>
-	</div>
+<!-- 	<div class="pull-right" -->
+<!-- 		ng-if="referencias!=undefined && referencias!=null && referencias.lenght!=0"> -->
+<!-- 		<referencia></referencia> -->
+<!-- 	</div> -->
 	<!-- Page Header -->
 	<page-header></page-header>
 	<!-- Alert Modal -->
